# SeniorDesignProject

./: Jeremy.xml  hugh.xml  suley.xml
ESPcode/: breadboard_demo1.c  breadboard_demo2.c  debouncedPIR.c  espFinal.c  espMotion.c  espSuction.c  espToMQTT.c  esp_mqtt_test.c
KiCadExtras/: 2025-10-05_22-53-22.kicad_sym  2025-10-12_01-10-01.kicad_sym  DCK0006A.kicad_mod  IC_TPS2121RUXR.kicad_mod  SOT95P280X145-5N.kicad_mod  TPS2120YFPR.kicad_mod  TPS613222ADBVR.kicad_sym
boards/: #auto_saved_files#  ECE 445 - Suction Sense PCB-1-B_Cu.gbr  ECE 445 - Suction Sense PCB-1-B_Mask.gbr  ECE 445 - Suction Sense PCB-1-B_Silkscreen.gbr  ECE 445 - Suction Sense PCB-1-Edge_Cuts.gbr  ECE 445 - Suction Sense PCB-1-F_Cu.gbr  ECE 445 - Suction Sense PCB-1-F_Mask.gbr  ECE 445 - Suction Sense PCB-1-F_Silkscreen.gbr  ECE 445 - Suction Sense PCB-1-NPTH.drl  ECE 445 - Suction Sense PCB-1-PTH.drl  ECE 445 - Suction Sense PCB-1-bottom.pos  ECE 445 - Suction Sense PCB-1-job.gbrjob  ECE 445 - Suction Sense PCB-1-top.pos  ECE 445 - Suction Sense PCB-1.csv  ECE 445 - Suction Sense PCB-1.dsn  ECE 445 - Suction Sense PCB-1.kicad_pcb  ECE 445 - Suction Sense PCB-1.kicad_prl  ECE 445 - Suction Sense PCB-1.kicad_pro  ECE 445 - Suction Sense PCB-1.kicad_sch  fp-info-cache  (+6 more)
webapp/: .gitignore  CMakeLists.txt  README.md  suction_sense  suction_sense.db  suction_sense.db-shm  suction_sense.db-wal
webapp/include/: api.hpp  models.hpp  mqtt_ingestor.hpp  repo.hpp  util.hpp  views.hpp
webapp/src/: api.cpp  main.cpp  mqtt_ingestor.cpp  repo.cpp  server  server_mac  suction_sense.db  util.cpp  views.cpp
(+16 files in other folders)
